{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Player Movement",
            "id": "e45e4c5e-b573-408e-aa53-5c64a4e1ad5a",
            "actions": [
                {
                    "name": "Walk",
                    "type": "PassThrough",
                    "id": "38073cc8-3d60-447d-8c0d-b2ae129dda06",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "56472616-b798-4775-981d-c54bea590936",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "298a3f9f-edf2-449e-beba-c29fe0e08496",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Screenshot",
                    "type": "Button",
                    "id": "f54300ad-c945-4dbd-8714-14d09b5485ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "0c958753-469b-4fbe-b085-740659493a59",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "5b4752a2-f856-4763-ac8f-bbc033d601c9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseDrag",
                    "type": "Value",
                    "id": "8b1f3dd9-32f0-4a49-baa2-ae0b1dab35c2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "b0af2e05-b23f-4e9d-9a24-20e7541741a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "adce43c7-dd2d-4f17-89b3-c9ab5de16c59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Report",
                    "type": "Button",
                    "id": "578bb725-9d58-4c8f-a323-f1ddc00fce1b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "ffd61359-cbbe-4ff3-a25f-88fb12d0fd02",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0ed04baa-8952-4933-b628-62f6e79ba24d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "33bab3fa-c03f-4cb1-9d6e-6443e414c372",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "55133baa-0ef6-423e-91c9-05f05be70f84",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c5707350-aa2f-40af-9713-6d2c668b7ed8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cd114520-86ba-4b43-b173-86966a2bf3d6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f54e858-b802-4cd4-9d52-c264bb08fae7",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b242192-aecb-4c00-8aa7-4993ba475a7c",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1090a01-eb20-4f30-aded-d57a6355e226",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8810b176-68ec-461a-9b1f-ebf5c6718481",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "847f3406-4c91-4e25-8fd8-54d4a25ddcf0",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfdb4bae-b61a-4a3b-8c10-6047cb46545d",
                    "path": "<Keyboard>/#(R)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Report",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96e80e98-03f6-41ea-bee4-f240c0a93b7b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Screenshot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8ba35b7-4dd1-44a1-8c56-104d793df9b9",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}